--- a/Graph3D/Graph3D.vcxproj
+++ b/Graph3D/Graph3D.vcxproj
@@ -92,6 +92,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -131,6 +132,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
       <FloatingPointModel>Fast</FloatingPointModel>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -161,6 +163,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\Graph3D\Axis.cpp" />
     <ClCompile Include="src\Graph3D\Expression.cpp" />
     <ClCompile Include="src\Graph3D\Graph3D.cpp" />
     <ClCompile Include="src\Graph3D\Plane3D.cpp" />
@@ -190,9 +193,11 @@
     <ClCompile Include="src\Vendor\imgui\imgui_widgets.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Graph3D\Axis.h" />
     <ClInclude Include="src\Graph3D\Expression.h" />
     <ClInclude Include="src\Graph3D\Graph3D.h" />
     <ClInclude Include="src\Graph3D\Plane3D.h" />
+    <ClInclude Include="src\Graph3D\Surface.h" />
     <ClInclude Include="src\OpenGL\Camera.h" />
     <ClInclude Include="src\OpenGL\IndexBuffer.h" />
     <ClInclude Include="src\OpenGL\Renderer.h" />
